Update RowProvider iface for async methods